--- a/framework/template/header.html
+++ b/framework/template/header.html
@@ -11,7 +11,7 @@
   <li class="am-hide-sm-only"><a href="javascript:;" id="admin-fullscreen"><span class="am-icon-arrows-alt"></span> <span class="admin-fullText">开启全屏</span></a></li>
 </ul>
 </div>
-<audio id="order_mp3" >
+<audio id="order_mp3" preload="auto">
   <source src="music/order.mp3" type="audio/mp3" />
   
 Your browser does not support this audio format.
