--- a/framework/template/sidebar.html
+++ b/framework/template/sidebar.html
@@ -1,8 +1,8 @@
     <div class="am-offcanvas-bar admin-offcanvas-bar">
       <ul class="am-list admin-sidebar-list">
-        <li><a ui-sref="orderList"><span class="am-icon-home"></span> 订单列表</a></li>
-
-        <li><a ui-sref="productsList"><span class="am-icon-table"></span> 产品管理</a></li>
+        <li><a ui-sref="orderList"><span class="am-icon-home"></span>订单列表</a></li>
+        <li><a ui-sref="productsList"><span class="am-icon-table"></span>产品管理</a></li>
+		<li><a ui-sref="adverts"><span class="am-icon-pencil-square-o"></span>广告管理</a></li>
     
       </ul>
 
