团购 限时抢购项
团购 限时抢购项

--- a/framework/template/sidebar.html
+++ b/framework/template/sidebar.html
@@ -3,6 +3,8 @@
         <li><a ui-sref="orderList"><span class="am-icon-home"></span>订单列表</a></li>
         <li><a ui-sref="productsList"><span class="am-icon-table"></span>产品管理</a></li>
 		<li><a ui-sref="adverts"><span class="am-icon-pencil-square-o"></span>广告管理</a></li>
+		<li><a ui-sref="groups"><span class="am-icon-percent"></span>团购管理</a></li>
+		<li><a ui-sref="timeLimits"><span class="am-icon-calendar-times-o"></span>限时抢购</a></li>
     
       </ul>
 
