--- a/framework/template/sidebar.html
+++ b/framework/template/sidebar.html
@@ -5,6 +5,7 @@
 		<li><a ui-sref="adverts"><span class="am-icon-pencil-square-o"></span>广告管理</a></li>
 		<li><a ui-sref="groups"><span class="am-icon-percent"></span>团购管理</a></li>
 		<li><a ui-sref="timeLimits"><span class="am-icon-calendar-times-o"></span>限时抢购</a></li>
+		<li><a ui-sref="home"><span class="am-icon-calendar-times-o"></span>首页管理</a></li>
     
       </ul>
 
