--- a/framework/template/header.html
+++ b/framework/template/header.html
@@ -7,7 +7,17 @@
 <div class="am-collapse am-topbar-collapse" id="topbar-collapse">
 
 <ul class="am-nav am-nav-pills am-topbar-nav am-topbar-right admin-header-list">
-  <li><a href="javascript:;"><span class="am-icon-envelope-o"></span> 未处理 <span class="am-badge am-badge-warning">{{number}}</span></a></li>
+  <li><a ui-sref="orderList"><span class="am-icon-envelope-o"></span> 未处理 <span class="am-badge am-badge-warning">{{number}}</span></a></li>
+  <li class="am-dropdown" data-am-dropdown="">
+        <a class="am-dropdown-toggle" data-am-dropdown-toggle="" href="javascript:;">
+          <span class="am-icon-users"></span> 管理员 <span class="am-icon-caret-down"></span>
+        </a>
+        <ul class="am-dropdown-content">
+          <li><a ui-sref="info"><span class="am-icon-user"></span> 资料</a></li>
+          <li><a ui-sref="info"><span class="am-icon-cog"></span> 设置</a></li>
+          <li><a ui-sref="login"><span class="am-icon-power-off"></span> 退出</a></li>
+        </ul>
+  </li>
   <li class="am-hide-sm-only"><a href="javascript:;" id="admin-fullscreen"><span class="am-icon-arrows-alt"></span> <span class="admin-fullText">开启全屏</span></a></li>
 </ul>
 </div>
@@ -25,4 +35,5 @@ Your browser does not support this audio format.
 	$(document).on($.AMUI.fullscreen.raw.fullscreenchange, function() {
 	  $fullText.text($.AMUI.fullscreen.isFullscreen ? '退出全屏' : '开启全屏');
 	})
+	$('.am-dropdown').dropdown();
 </script>
