--- a/framework/template/sidebar.html
+++ b/framework/template/sidebar.html
@@ -1,11 +1,11 @@
     <div class="am-offcanvas-bar admin-offcanvas-bar">
       <ul class="am-list admin-sidebar-list">
-        <li><a ui-sref="orderList"><span class="am-icon-home"></span>订单列表</a></li>
+        <li><a ui-sref="orderList"><span class="am-icon-bars"></span>订单列表</a></li>
         <li><a ui-sref="productsList"><span class="am-icon-table"></span>产品管理</a></li>
 		<li><a ui-sref="adverts"><span class="am-icon-pencil-square-o"></span>广告管理</a></li>
 		<li><a ui-sref="groups"><span class="am-icon-percent"></span>团购管理</a></li>
 		<li><a ui-sref="timeLimits"><span class="am-icon-calendar-times-o"></span>限时抢购</a></li>
-		<li><a ui-sref="home"><span class="am-icon-calendar-times-o"></span>首页管理</a></li>
+		<li><a ui-sref="home"><span class="am-icon-home"></span>首页管理</a></li>
     
       </ul>
 
